data from Illumina SNP arrays (functions named readIdatFiles() 
and crlmmIllumina() in crlmm-illumina.R)
* added man pages for these functions

2009-04-01 Matt Ritchie - committed version 1.0.67

* added import statement for normalize.quantiles

2009-04-01 R.Scharpf - committed version 1.0.69

* added a few items to the crlmm TODOs

2009-04-03 B Carvalho - committed version 1.0.70

* Updated TODO and DESCRIPTION

2009-04-04 R.Scharpf - committed version 1.0.71

*  bug in oneBatch function for chromosome X.  added additional checks for missing values

2009-04-06 Matt Ritchie - committed version 1.0.72

* new argument in readIdatFiles() 'saveDate', which saves the date and time each array
is decoded and scanned
* results from crlmmIllumina() now saved as 'SnpSet' just like crlmm()
* reorganised Illumina preprocessing functions slightly to
  - allow copy number intensities to be saved along with snp intensities
  - make use of new indexing objects in the chip specific crlmm data packages
  - fix a few bugs

2009-04-07 Rob Scharpf - committed version 1.0.73

* added cdfName as argument to computeCopynumber

2009-04-07 B Carvalho - committed version 1.0.74

* Added documentation for snprma.

* Removed 'svn:executable' property of readIdatFiles.Rd

2009-04-07 Rob Scharpf - committed version 1.0.75

* modifications to chromosome X copy number estimation

2009-04-07 Rob Scharpf - committed version 1.0.76

* fixed bug in cnrma

2009-04-07 Rob Scharpf - committed version 1.0.77

* cnrma accepts other cdfNames

* fixed bug in cnrma

2009-04-07 Rob Scharpf - committed version 1.0.78

* added conf as argument to instantiateObjects

2009-04-08 Matt Ritchie - committed version 1.0.79

* fixed bug in readIDAT and readIdatFiles from reading in RunInfo header information

2009-04-07 B Carvalho - committed version 1.0.80 (advantages of being a lot of hours behind)

* Fixed downstream vignette to account for the SnpSet object being returned by crlmm

* Fixed some minor status messages